--- a/core/templates/accounts/register.html
+++ b/core/templates/accounts/register.html
@@ -52,6 +52,17 @@
                     <div class="row">
                       <div class="col-md-3 px-md-1">
                         <div class="form-group">
+                          <label>Phone</label>
+                          {{ form.first_name }}
+                        </div>
+                      </div>
+                    </div>
+                    <span class="text-danger">{{ form.username.errors }}</span>
+
+
+                    <div class="row">
+                      <div class="col-md-3 px-md-1">
+                        <div class="form-group">
                           <label>Password</label>
                           {{ form.password1 }}
                         </div>
