--- a/core/templates/includes/sidebar.html
+++ b/core/templates/includes/sidebar.html
@@ -37,6 +37,12 @@
             </a>
           </li>
           <li>
+            <a href="{% url 'notifications' %} ">
+              <i class="tim-icons icon-bell-55"></i>
+              <p>Notifications</p>
+            </a>
+          </li>
+          <li>
             <a href="/page-user.html">
               <i class="tim-icons icon-single-02"></i>
               <p>User Profile</p>
