--- a/core/templates/pages/page-user.html
+++ b/core/templates/pages/page-user.html
@@ -58,6 +58,14 @@
             </div>
           </div>
           <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <label>Phone</label>
+                <input type="text" class="form-control" placeholder="Phone Number" value="{{ request.user.first_name }}">
+              </div>
+            </div>
+          </div>
+          <div class="row">
             <div class="col-md-4 pr-md-1">
               <div class="form-group">
                 <label>City</label>
